website mods - better view on big screens

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Guru Raja Dintakurthi.</title>
+  <title>Guru Raja Dintakurthi</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@300&family=Sacramento&display=swap" rel="stylesheet">
@@ -37,11 +37,13 @@
         <img class="computer-image" src="images/computer.png" alt="">
         <h3>Coding Skills</h3>
         <p class="first-skill-description">
-          <b>Tool Skills:</b> Python, TensorFlow, Matplotlib, SQL, Microsoft
-          Excel, Matlab, Mathematica
-        <br><b>Analytical Skills:</b> Statistics, Debugging, Data Analysis,
+          <h4>Tool Skills</h4>
+          <p>Python, TensorFlow, Matplotlib, SQL, Microsoft
+          Excel, Matlab, Mathematica</p>
+          <h4>Analytical Skills</h4>
+        <p> Statistics, Debugging, Data Analysis,
          Data Manipulation, Data Wrangling, Metrics,
-        Modeling Data, Producing Data Visualizations, Machine Learning, Deep Learning
+        Modeling Data, Producing Data Visualizations, Machine Learning, Deep Learning</p>
       </p>
 
       </div>
