--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/guru-raja-dintakurthi/" target="_top">LinkedIn</a>
-    <a class="footer-link" href="https://sites.google.com/view/guru-raja-dintakurthi-courses/home" target="_top">Courses completed</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/guru-raja-dintakurthi/" target="_blank">LinkedIn</a>
+    <a class="footer-link" href="https://sites.google.com/view/guru-raja-dintakurthi-courses/home" target="_blank">Courses completed</a>
   </div>
 
 </body>
