--- a/index.html
+++ b/index.html
@@ -30,27 +30,21 @@
 
       </p>
     </div>
+    <hr class="lasthr">
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>If you share similar interests!</h3>
+      <p class="contact-message">If you have any comments, please feel free to drop me a message on LinkedIn.
+        I might not respond immediately but I will try to get in touch at the earliest possible.</p>
+      <a class="btn" href="https://www.linkedin.com/in/guru-raja-dintakurthi/" target="_blank">CONTACT ME</a>
+    </div>
   </div>
-
-
-
-
-  <hr class="lasthr">
-  <div class="contact-me">
-    <h2>Get In Touch</h2>
-    <h3>If you share similar interests!</h3>
-    <p class="contact-message">If you have any comments, please feel free to drop me a message on LinkedIn.
-      I might not respond immediately but I will try to get in touch at the earliest possible.</p>
-    <a class="btn" href="https://www.linkedin.com/in/guru-raja-dintakurthi/" target="_blank">CONTACT ME</a>
-  </div>
-
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/guru-raja-dintakurthi/" target="_blank">LinkedIn</a>
-    <a class="footer-link" href="https://sites.google.com/view/guru-raja-dintakurthi-courses/home" target="_blank">Courses completed</a>
+    <a style="font-size:10px" class="footer-link btn-down" href="https://www.linkedin.com/in/guru-raja-dintakurthi/" target="_blank">LinkedIn</a>
+    <a class="footer-link btn-down" href="https://sites.google.com/view/guru-raja-dintakurthi-courses/home" target="_blank">Courses completed</a>
   </div>
-
 
 </body>
 
