--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
 
   <div class="bottom-container">
-    <a style="font-size:10px" class="footer-link btn-down" href="https://www.linkedin.com/in/guru-raja-dintakurthi/" target="_blank">LinkedIn</a>
-    <a class="footer-link btn-down" href="https://sites.google.com/view/guru-raja-dintakurthi-courses/home" target="_blank">Courses completed</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/guru-raja-dintakurthi/" target="_blank">LinkedIn</a>
+    <a class="footer-link" href="https://sites.google.com/view/guru-raja-dintakurthi-courses/home" target="_blank">Courses completed</a>
   </div>
 
 </body>
